<resources>
    <string name="app_name">W24_3175_G11_Peekaboo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtbtnCompose">Compose</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="txtViewNewMessageTitle">New Message</string>
    <string name="bottom_home">Home</string>
    <string name="imgViewCheckin">Check in</string>
    <string name="imgViewCheckout">Check out</string>
    <string name="imgViewActivity">Activity</string>
    <string name="bottom_Messages">Messages</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="btnLogin">Log in</string>
    <string name="txtViewSignUp">dont_have_an_account_sign_up</string>
    <string name="checkBoxRememberMe">RememberMe</string>
    <string name="txtViewForgotPassword">ForgotPassword</string>
    <string name="imgViewlogo">logo</string>
    <string name="textViewSignup">Don\'t have an account ? Sign up</string>
    <string name="btnLogout">Log out</string>
    <string name="default_web_client_id">1042667222515-r3vd52tg26cs4lrs8frhn2fm5ie1tmfj.apps.googleusercontent.com</string>

    <string name="txtTitleMessage">New Message</string>
    <string name="selectChildText">Select a Child</string>
    <string name="textViewSubject">Subject</string>
    <string name="TextViewMsgBody">Body</string>
    <string name="msgBodyHint">Write your message here...</string>
    <string name="HintMsgSubject">write message subject here</string>
    <string name="txtViewAttachmentTitle">Attachment</string>
    <string name="txtViewBtn">Choose File</string>
    <string name="txtBtnSend">Send</string>
    <string name="txtSpinnerPrompt">choose a child name</string>
    <string name="txtViewRegistartion">Registration</string>
    <string name="editTextChildName">Name</string>
    <string name="editTextDateOfBirth">Date of Birth</string>
    <string name="textViewTitleRegistration">Registration</string>
    <string-array name="ChildNames">
        <item>Tehana Pabaduli</item>
        <item>Dinu Seth</item>
        <item>Nady Toshika</item>
    </string-array>

    <string name="first_name_label">First Name</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="dob_label">Date of Birth</string>
    <string name="dob_hint">Select date</string>
    <string name="gender_label">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="profile_pic_label">Profile Picture</string>
    <string name="profile_pic_hint">Profile picture preview</string>
    <string name="upload">Upload</string>
    <string name="parent_name_label">Parent Name</string>
    <string name="parent_name_hint">Enter parent name</string>
    <string name="parent_email_label">Parent Email</string>
    <string name="parent_email_hint">Enter parent email</string>
    <string name="register">Register</string>
    <string name="btnDaycareDirection">Get Daycare Location</string>

    <string name="txtViewMapTitle">Find the Daycare</string>
    <string name="hintsourceLocation">Enter source Location</string>
    <string name="HintDestinationLocation">Enter Destination location</string>
    <string name="BtnOpenNavigation">OPEN NAVIGATION</string>
    <string name="btnChat">Chat</string>
    <string name="editTextChild">Child name</string>
    <string name="editTextMessage">Write message here</string>
    <string name="btnTextMakePayment">Make Payment</string>
    <string name="txtViewTitleActivity">Activity</string>
    <string name="txtADesc">Description</string>
    <string name="txtPhoto">Photo</string>
    <string name="btnUploadImage">Upload</string>
    <string name="txtTitle">Title</string>
    <string name="editTextTitle">Title\n</string>
    <string name="btnCreateEntry">Create Entry</string>
    <string name="txtViewChild">Child</string>

    <string name="channel_name">Peekaboo</string>
    <string name="channel_description">Peekaboo_daycare</string>

    <string-array name="absent_reasons">
        <item>Sick</item>
        <item>Vacation</item>
        <item>No-show</item>
        <item>Home day</item>
        <item>Appointment</item>
    </string-array>
</resources>