<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChildRegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                    <TextView
                        android:id="@+id/firstNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/first_name_label"
                        android:textColor="@color/labelColor"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:hint="@string/first_name_hint"
                        android:inputType="textPersonName"
                        android:textSize="16sp"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

                    <TextView
                        android:id="@+id/lastNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/last_name_label"
                        android:layout_marginStart="20dp"
                        android:textColor="@color/labelColor"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />

                    <EditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/last_name_hint"
                        android:inputType="textPersonName"
                        android:textSize="16sp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />


                    <TextView
                        android:id="@+id/dobLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/dob_label"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:textSize="16sp"
                        android:textColor="@color/labelColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />


                    <Button
                        android:id="@+id/datePickerButton"
                        style="?android:spinnerStyle"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob_hint"
                        android:inputType="date"
                        android:onClick="openDatePicker"
                        android:text="JAN 01 2024"
                        android:textSize="16sp"
                        android:textColor="@color/inputTextColor"
                        app:layout_constraintStart_toEndOf="@+id/dobLabel"
                        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

                    <TextView
                        android:id="@+id/genderLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/gender_label"
                        android:layout_marginStart="20dp"

                        android:textSize="16sp"
                        android:textColor="@color/labelColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/datePickerButton" />


                    <RadioGroup
                        android:id="@+id/radGroupGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/genderLabel"
                        app:layout_constraintTop_toBottomOf="@+id/datePickerButton">

                            <RadioButton
                                android:id="@+id/radMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:textColor="@color/inputTextColor" />

                            <RadioButton
                                android:id="@+id/radFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female"
                                android:textColor="@color/inputTextColor" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/profilePicLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/profile_pic_label"
                        android:layout_marginStart="20dp"

                        android:textSize="16sp"
                        android:textColor="@color/labelColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/radGroupGender" />

                    <ImageView
                        android:id="@+id/picProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/profile_pic_hint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profilePicLabel"
                        app:srcCompat="@drawable/ic_profile" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/upload"
                        android:textSize="16sp"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:background="@drawable/button_background"
                        app:layout_constraintStart_toEndOf="@id/picProfile"
                        app:layout_constraintTop_toTopOf="@id/picProfile" />


                    <TextView
                        android:id="@+id/parentNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/parent_name_label"
                        android:textSize="16sp"

                        android:textColor="@color/labelColor"
                        android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/picProfile" />

                    <EditText
                        android:id="@+id/editTextParentName"
                        android:layout_width="0dp"
                        android:hint="@string/parent_name_hint"
                        android:inputType="textPersonName"
                        android:textSize="16sp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:padding="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_height="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/parentNameLabel" />

                    <TextView
                        android:id="@+id/parentEmailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/parent_email_label"
                        android:textSize="16sp"

                        android:layout_marginStart="20dp"
                        android:textColor="@color/labelColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editTextParentName" />

                    <EditText
                        android:id="@+id/editTextParentEmail"
                        android:layout_width="0dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:hint="@string/parent_email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/labelColor"
                        android:textSize="16sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_height="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/parentEmailLabel" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextParentEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>